added background and ul

--- a/index.html
+++ b/index.html
@@ -19,20 +19,32 @@
             <h1>
                 Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee
             </h1>
-            <p>
+            <p class="soft-grey">
                 Scritto da <span class="light-blu">The Booleaner</span><br>il 10/10/2020
             </p>
         </section>
+    </header>
+
+    <main>
         <!-- foto di tim  -->
         <section>
             <img src="./img/tim-1.jpg" alt="tim prima foto">
             <img src="./img/tim-2.jpg" alt="tim seconda foto">
+            <p>1st Photo: john S. and James L. Knight Foundation, by Scott Henrichsen <br>
+                2nd photo: Wikipedia, by Paul Clarke
+            </p>
         </section>
-        
-        
-    </header>
-
-    <main>
+        <!-- sezione paragrafo e lista non ordinata  -->
+        <section>
+            <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis deserunt eum a? Facere qui et praesentium fugit accusamus, non amet sit laboriosam quaerat mollitia obcaecati, officiis quis asperiores. Dignissimos, corrupti.
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dolore. Vero asperiores minus modi odio, veritatis facere, quasi voluptate temporibus, consequatur earum cumque saepe error alias. Molestiae dolore corrupti veritatis!</li>
+                <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortris nisl ut aliquip ex ea commodo conquest</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, aut quas voluptate exercitationem neque, veritatis, possimus corrupti praesentium commodi enim esse adipisci laboriosam labore? A itaque numquam eveniet tempore odio.</li>
+            </ul>
+        </section>
 
     </main>
 
