--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,12 +37,12 @@
         <!-- sezione paragrafo e lista non ordinata  -->
         <section>
             <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis deserunt eum a? Facere qui et praesentium fugit accusamus, non amet sit laboriosam quaerat mollitia obcaecati, officiis quis asperiores. Dignissimos, corrupti.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quisquam laudantium,  <mark>esse nostrum excepturi aspernatur impedit suscipit debitis inventore molestias sapiente?</mark>  Laboriosam sit maiores deserunt officia quibusdam quaerat officiis non.
             </p>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dolore. Vero asperiores minus modi odio, veritatis facere, quasi voluptate temporibus, consequatur earum cumque saepe error alias. Molestiae dolore corrupti veritatis!</li>
                 <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortris nisl ut aliquip ex ea commodo conquest</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, aut quas voluptate exercitationem neque, veritatis, possimus corrupti praesentium commodi enim esse adipisci laboriosam labore? A itaque numquam eveniet tempore odio.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quam modi vitae. Laborum alias quod eaque consequuntur cumque modi, veritatis quibusdam assumenda iure sit consectetur aliquid explicabo, reiciendis exercitationem sapiente?</li>
             </ul>
         </section>
 
