--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quam modi vitae. Laborum alias quod eaque consequuntur cumque modi, veritatis quibusdam assumenda iure sit consectetur aliquid explicabo, reiciendis exercitationem sapiente?</li>
             </ul>
         </section>
+        <!-- tabella  -->
+        <section>
+            <table>
+                <!-- intestazione tabella  -->
+                <thead class=" dark-blu">
+                 <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                 </tr>
+                </thead>
+                <!-- corpo tabella  -->
+                <tbody></tbody>
+
+            </table>
+        </section>
 
     </main>
 
