--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,14 +50,30 @@
             <table>
                 <!-- intestazione tabella  -->
                 <thead class=" dark-blu">
-                 <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                 </tr>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
                 </thead>
                 <!-- corpo tabella  -->
-                <tbody></tbody>
+                <tbody>
+                    <tr class="celeste">
+                        <td class=>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                    </tr>
+                    <tr class="celeste">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                    </tr>
+                </tbody>
 
             </table>
         </section>
