added footer with img

--- a/index.html
+++ b/index.html
@@ -77,11 +77,19 @@
 
             </table>
         </section>
+        <!-- sezione paragrafo  -->
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Beatae quisquam non ullam consequatur accusantium vero, quos, ea quae maiores eligendi nostrum nam dignissimos quod minus facilis?</mark> Incidunt velit minus eveniet?
+            </p>
+        </section>
 
     </main>
 
     <footer>
-
+        <p class="soft-grey">Potrebbe interssarti</p>
+        <img src="./img/monitor.jpg" alt="Monitor">
+        <img id="proprietà-inline" src="./img/graph.jpg" alt="Grafico">
     </footer>
 </body>
 </html>
