added footer image and lorem

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
     <footer>
         <p class="soft-grey">Potrebbe interssarti</p>
-        <img src="./img/monitor.jpg" alt="Monitor">
-        <img id="proprietà-inline" src="./img/graph.jpg" alt="Grafico">
+        <p id="display">Lorem ipsum dolor</p>
+        <p id="grafico">Lorem ipsum dolor</p>
     </footer>
 </body>
 </html>
