--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
     <footer>
         <p class="soft-grey">Potrebbe interssarti</p>
-        <p id="display">Lorem ipsum dolor</p>
-        <p id="grafico">Lorem ipsum dolor</p>
+        <p class="display foto">Lorem ipsum dolor</p>
+        <p class="grafico foto">Lorem ipsum dolor</p>
     </footer>
 </body>
 </html>
