--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <section>
             <img src="./img/tim-1.jpg" alt="tim prima foto">
             <img src="./img/tim-2.jpg" alt="tim seconda foto">
-            <p>1st Photo: john S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            <div>1st Photo: john S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd photo: Wikipedia, by Paul Clarke
-            </p>
+            </div>
         </section>
         <!-- sezione paragrafo e lista non ordinata  -->
         <section>
@@ -59,7 +59,7 @@
                 <!-- corpo tabella  -->
                 <tbody>
                     <tr class="celeste">
-                        <td class=>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
                     </tr>
