added padding-left to table

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
                 <thead class=" dark-blu">
                     <tr>
                         <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
+                        <th class="tabelle-spazio">Lorem ipsum dolor</th>
+                        <th class="tabelle-spazio">Lorem ipsum dolor</th>
                     </tr>
                 </thead>
                 <!-- corpo tabella  -->
                 <tbody>
                     <tr class="celeste">
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
                     </tr>
                     <tr>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
                     </tr>
                     <tr class="celeste">
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor</td>
+                        <td class="tabelle-spazio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam iusto soluta ad corporis. Facilis necessitatibus, distinctio eligendi officia praesentium rem doloribus, voluptate, explicabo optio alias dignissimos accusantium molestiae cupiditate recusandae?</td>
                     </tr>
                 </tbody>
 
